--- a/public/coursecreation.html
+++ b/public/coursecreation.html
@@ -28,15 +28,13 @@
                method: 'POST',
                url: 'create',
                data: $.param({
-               title: $scope.title, 
-               location: $scope.location,
-               category: $scope.category,
-               description: $scope.description,
-               price: $scope.price,
-               difficulty: $scope.level,
-               skill1: $scope.skill1,
-               skill2: $scope.skill2,
-               skill3: $scope.skill3 }),
+               title: $scope.title.toString(), 
+               location: $scope.location.toString(),
+               category: $scope.category.toString(),
+               description: $scope.description.toString(),
+               price: $scope.price.toString(),
+               difficulty: $scope.level.toString(),
+               skills: $scope.skills.toString()}),
               headers: {'Content-Type': 'application/x-www-form-urlencoded'}
             }
             $http(req);
@@ -63,14 +61,14 @@
                   <div class="form-group">
                      <label class="control-label col-sm-3" for="first-name">Course Title</label>
                      <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="Biology" ng-model="title" maxlength="30" required>
+                        <input type="text" class="form-control" placeholder="Biology" ng-model="title" maxlength="50" required>
                      </div>
                   </div>
                   <div class="form-group">
                      <label class="control-label col-sm-3" for="location">Location</label>
                      <div class="col-sm-8">
                         <div class="col-sm-9">
-                           <input type="text" class="form-control" placeholder="Location" ng-model="location" ng-disabled="disable" maxlength="40" required>
+                           <input type="text" class="form-control" placeholder="Location" ng-model="location" ng-disabled="disable" maxlength="50" required>
                         </div>
                         <div class="col-sm-3">
                            <label class="checkbox-inline"><input type="checkbox" ng-model="disable">Online</label>
@@ -96,7 +94,7 @@
                            <input type="radio" value="Home-Related" name="category" ng-model="category" >Home-Related
                         </label>
                         <label class="radio-inline">
-                           <input type="radio" value="Sports and Games " name="category" ng-model="category" >Sports and Games 
+                           <input type="radio" value="Sports and Games " name="category" ng-model="category">Sports and Games 
                         </label>
                         <label class="radio-inline">
                            <input type="radio" value="Technology" name="category" ng-model="category" >Technology
@@ -110,21 +108,19 @@
                   <div class="form-group">
                      <label class="control-label col-sm-3" for="price">Price:</label>
                      <div class="col-sm-3">
-                        <input type="price" class="form-control" ng-model="price" placeholder='10'; pattern="\d+(\.\d{2})?" maxlength="5" required>
+                        <input type="price" class="form-control" ng-model="price" placeholder='$20 / Class' required>
                      </div>
                   </div>
                   <div class="form-group">
-                     <label class="control-label col-sm-3" for="description">Course Description</label>
+                     <label class="control-label col-sm-3" for="description">Course Description:</label>
                      <div class="col-sm-8">
-                        <textarea name="description" rows="4" class="form-control" ng-model="description" required></textarea>
+                        <textarea name="description" rows="4" class="form-control" ng-model="description" placeholder="Tell everyone what the course is about" required></textarea>
                      </div>
                   </div>
                   <div class="form-group">
                      <label class="control-label col-sm-3" for="skills">Previous Skills Required:</label>
                      <div class="col-sm-8">
-                        <input type="skills" class="form-control" id="skill" ng-model="skill1" placeholder="Skill 1" maxlength="30">
-                        <input type="skills" class="form-control" id="skill" ng-model="skill2" placeholder="Skill 2" maxlength="30">
-                        <input type="skills" class="form-control" id="skill" ng-model="skill3" placeholder="Skill 3" maxlength="30">
+                        <textarea name="skills" rows="4" class="form-control" placeholder="Any skills you want your students to know" ng-model="skills" required></textarea>
                      </div>
                   </div>
                   <div class="form-group">
