--- a/public/course.html
+++ b/public/course.html
@@ -29,6 +29,8 @@
 						$scope.title = data[0].title;
 						$scope.category = data[0].category;
 						$scope.price = data[0].price;
+						$scope.skills = data[0].skills;
+						$scope.difficulty = data[0].difficulty;
 						$scope.location = data[0].location;
 						$scope.description = data[0].description;
 					});
@@ -46,7 +48,7 @@
 		<main>
 			<div class="container-fluid">
 				<div class="row">
-					<nav class="col-sm-3" id="courseScrollspy">
+					<nav class="col-sm-3 col-xs-3" id="courseScrollspy">
 						<ul class="nav nav-pills nav-stacked">
 						    <li><a href="#general-info">General Information</a></li>
 							<li><a href="#overview">Overview</a></li>
@@ -54,8 +56,8 @@
 							<li><a href="#reviews">Reviews</a></li>
 						</ul>
 					</nav>
-					<div class="col-sm-9">
-						<button type="button" id="course-control" class="btn btn-default col-sm-offset-10 btn-lg pull-right">Edit Course</button>
+					<div class="col-sm-9 col-xs-9">
+						<!--<button type="button" id="course-control" class="btn btn-default col-sm-offset-10 btn-lg pull-right">Edit Course</button>-->
 						<h3 class="text-center">{{title}}</h3>
 						<div class="text-center rating">
 							<a href="#reviews">
@@ -71,27 +73,27 @@
 						    <div class="panel-heading">General Information</div>
 						    <div class="panel-body">
 								<div class="row">
-									<div class="col-sm-10">
+									<div class="col-sm-12">
 										<div class="row">
-											<div class="col-sm-2">Category:</div>
-											<div class="col-sm-10">{{category}}</div>
+											<div class="col-sm-3">Category:</div>
+											<div class="col-sm-9">{{category}}</div>
 										</div>
 										<div class="row">
-											<div class="col-sm-2">Price:</div>
-											<div class="col-sm-10">{{price}}</div>
+											<div class="col-sm-3">Price:</div>
+											<div class="col-sm-9">{{price}}</div>
 										</div>
 										<div class="row">
-											<div class="col-sm-2">Type:</div>
-											<div class="col-sm-10">{{location}}</div>
+											<div class="col-sm-3">Type:</div>
+											<div class="col-sm-9">{{location}}</div>
 										</div>
 										<div class="row">
-											<div class="col-sm-2">Prerequisites:</div>
-											<div class="col-sm-10">None</div>
+											<div class="col-sm-3">Challenge Level:</div>
+											<div class="col-sm-9">{{difficulty}}</div>
 										</div>
-									</div>
-									<div class="col-sm-2">
-										<img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://coursera-course-photos.s3.amazonaws.com/b0/d82cc088ba11e585f3eff94fdbec60/3_Theo_World.jpg?auto=format&dpr=2&w=100&h=100&fit=fill&bg=FFF" 
-											class="img-rounded" alt="video game image" width="100" height="100">
+										<div class="row">
+											<div class="col-sm-3">Prerequisites:</div>
+											<div class="col-sm-9">{{skills}}</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -99,7 +101,7 @@
 						<div id="overview" class="panel panel-default">
 						    <div class="panel-heading">Overview</div>
 						    <div class="panel-body">
-								{{description}}
+								<div style="white-space: pre-wrap; width: 100%;">{{description}}</div>
 							</div>
 						</div>
 						<div id="instructor" class="panel panel-default">
