--- a/public/course.html
+++ b/public/course.html
@@ -26,6 +26,7 @@
 						headers: {'Content-Type': 'application/x-www-form-urlencoded'}
 					};
 					$http(req).success(function(data) {
+						console.log(data);
 						$scope.title = data[0].title;
 						$scope.category = data[0].category;
 						$scope.price = data[0].price;
