--- a/public/course.html
+++ b/public/course.html
@@ -25,6 +25,20 @@
 			}	
 		});
 
+		app.controller ("instructor", function($scope, $http) {
+			$scope.getInstructor = function (screen_name) {
+				var req = { 
+					method: 'POST',
+					url: '/user/short',
+					data: $.param({type: 'user', name : screen_name}),
+					headers: {'Content-Type': 'application/x-www-form-urlencoded'}
+				};
+				$http(req).success(function(data) {
+					console.log(data);
+				});
+			}	
+		});
+
 		function overall (comments) {
 			var sumRatings = 0;
 			for (i=0; i<comments.length; i++) {
@@ -135,6 +149,7 @@
 											class="img-responsive img-rounded center-block" alt="profile image" width="170" height="170">
 									</div>
 									<div class="col-sm-8">
+										<br><br>
 										<h4 class="">
 											<a href="#">Théotime Vaillant</a>
 											<small><br>Instructor, Experimental Animation, School of Film/Video</small>
@@ -143,14 +158,6 @@
 											<div class="col-sm-2">Email:</div>
 											<div class="col-sm-10"><a href="mailto:tvalillant@hotmail.ca">tvalillant@hotmail.ca</a></div>
 										</div>
-										<div class="row">
-											<div class="col-sm-2">Website:</div>
-											<div class="col-sm-10"><a href="#">www.theotimevaillant.com</a></div>
-										</div>
-										<br>
-										<p>Théo is a graduate of CalArts’ program in Experimental Animation, 
-											and also holds a Masters’ degree in Animation from ENSAD École Nationale Supérieure 
-											des Arts Décoratifs (ENSAD) in Paris.</p>
 									</div>
 								</div>
 							</div>
