--- a/public/edit-profile.html
+++ b/public/edit-profile.html
@@ -22,6 +22,12 @@
 				<form class="form-horizontal" name="editProfileForm" role="form" action="{{'users/user/'+originalScreenName}}" method="POST">
 					<fieldset class="col-sm-6">
 						<legend>Personal Information</legend>
+						<div class="form-group" hidden>
+							<label class="control-label col-sm-3" for="screen-name">Original Screen Name:</label>
+							<div class="col-sm-8">
+								<input type="text" name="originalScreenName" class="form-control" ng-model="originalScreenName" id="original-screen-name" readonly required>
+							</div>
+						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3" for="screen-name">Screen Name:</label>
 							<div class="col-sm-8">
