--- a/public/course.html
+++ b/public/course.html
@@ -103,6 +103,8 @@
 							<input type="hidden" name="screen_name" value="{{screen_name}}">
 						    <input type="submit" class="btn btn-default pull-right" value="Edit Course"/>
 						</form>
+						<button type="unflag" class="btn btn-danger" data-toggle="modal" data-target="#unflagModal">Unflag Course</button>
+						<button type="enrol" class="btn btn-primary pull-right">Enrol</button>
 						<button type="report" class="btn btn-danger" data-toggle="modal" data-target="#confirmModal">Report</button>
 						<h3 class="text-center">{{title}}</h3>
 						<div class="text-center rating">
@@ -243,6 +245,19 @@
 		        </div>
 		        <div class="modal-footer">
 		          <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="">Confirm</button>
+		          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		        </div>
+		      </div>
+		    </div>
+		</div>
+
+		<div class="modal fade" id="unflagModal">
+		    <div class="modal-dialog modal-sm">
+		      <div class="modal-content">
+		        <div class="modal-body">
+		          <p>{{title}} is unflagged.</p>
+		        </div>
+		        <div class="modal-footer">
 		          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 		        </div>
 		      </div>
